8350666: cmp-baseline builds fail after JDK-8280682

Reviewed-by: iklam